[gd_scene load_steps=86 format=3 uid="uid://bowdj1kbm60w"]

[ext_resource type="Texture2D" uid="uid://b37u43w6coeum" path="res://assets/textures/enemies/golem/Golem_IdleA.png" id="1"]
[ext_resource type="Script" uid="uid://bc1b6w1a4phks" path="res://src/entities/enemies/Turret.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/entities/enemies/TurretProjectile.tscn" id="3"]
[ext_resource type="Script" uid="uid://ch51r5katiytu" path="res://src/entities/enemies/TurretStateMachine.gd" id="3_p28ma"]
[ext_resource type="Script" uid="uid://bhqojb4dfwbkh" path="res://src/entities/enemies/DetectionArea.gd" id="4"]
[ext_resource type="Script" uid="uid://b2hxglk8vp01k" path="res://src/entities/enemies/State/IdleState.gd" id="4_kdf0b"]
[ext_resource type="Texture2D" uid="uid://nfhk6rjnhtgp" path="res://assets/textures/green_circle.png" id="5"]
[ext_resource type="Script" uid="uid://dhyxukkfo8jca" path="res://src/entities/enemies/State/WalkState.gd" id="5_qvltu"]
[ext_resource type="Texture2D" uid="uid://xj5bpwkcudkt" path="res://assets/textures/enemies/golem/Golem_DeathB.png" id="6"]
[ext_resource type="Script" uid="uid://e237qmp8ph6a" path="res://src/entities/enemies/State/AlertState.gd" id="6_xtvpq"]
[ext_resource type="Texture2D" uid="uid://crfywhioaac80" path="res://assets/textures/enemies/golem/Golem_IdleB.png" id="7"]
[ext_resource type="Script" uid="uid://cao6l318jthqj" path="res://src/entities/enemies/State/DieState.gd" id="7_fw7uh"]
[ext_resource type="Texture2D" uid="uid://b0pwak047umaf" path="res://assets/textures/enemies/golem/Golem_DeathA.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c5yrmrdtn52k1" path="res://assets/textures/enemies/golem/Golem_AttackB.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dcsitkpaqjuks" path="res://assets/textures/enemies/golem/Golem_AttackA.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bmoopmml4co" path="res://assets/textures/enemies/golem/Golem_Full.png" id="11"]
[ext_resource type="Texture2D" uid="uid://0761ecvdumvg" path="res://assets/textures/enemies/golem/Golem_Run.png" id="12"]

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("10")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("10")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("10")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("10")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("10")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("10")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("10")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("10")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("10")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("10")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("10")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("10")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("9")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("9")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("9")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("9")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("9")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("9")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("9")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="51"]
atlas = ExtResource("8")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="52"]
atlas = ExtResource("6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="53"]
atlas = ExtResource("6")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("6")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="55"]
atlas = ExtResource("6")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="56"]
atlas = ExtResource("6")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="57"]
atlas = ExtResource("6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("6")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("6")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("6")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("6")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="62"]
atlas = ExtResource("10")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="63"]
atlas = ExtResource("10")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="64"]
atlas = ExtResource("10")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="65"]
atlas = ExtResource("10")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="66"]
atlas = ExtResource("10")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="67"]
atlas = ExtResource("10")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="68"]
atlas = ExtResource("10")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="69"]
atlas = ExtResource("10")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="70"]
atlas = ExtResource("10")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="71"]
atlas = ExtResource("10")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="72"]
atlas = ExtResource("10")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="73"]
atlas = ExtResource("10")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="58"]
atlas = ExtResource("1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="60"]
atlas = ExtResource("1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="61"]
atlas = ExtResource("1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="74"]
atlas = ExtResource("11")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="75"]
atlas = ExtResource("11")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="76"]
atlas = ExtResource("12")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="77"]
atlas = ExtResource("12")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="78"]
atlas = ExtResource("12")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="79"]
atlas = ExtResource("12")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}],
"loop": false,
"name": &"alert",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("40")
}, {
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}, {
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("47")
}, {
"duration": 1.0,
"texture": SubResource("48")
}, {
"duration": 1.0,
"texture": SubResource("49")
}, {
"duration": 1.0,
"texture": SubResource("50")
}, {
"duration": 1.0,
"texture": SubResource("51")
}, {
"duration": 1.0,
"texture": SubResource("52")
}, {
"duration": 1.0,
"texture": SubResource("53")
}, {
"duration": 1.0,
"texture": SubResource("54")
}, {
"duration": 1.0,
"texture": SubResource("55")
}, {
"duration": 1.0,
"texture": SubResource("56")
}, {
"duration": 1.0,
"texture": SubResource("57")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}],
"loop": false,
"name": &"die_alert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("62")
}, {
"duration": 1.0,
"texture": SubResource("63")
}, {
"duration": 1.0,
"texture": SubResource("64")
}, {
"duration": 1.0,
"texture": SubResource("65")
}, {
"duration": 1.0,
"texture": SubResource("66")
}, {
"duration": 1.0,
"texture": SubResource("67")
}, {
"duration": 1.0,
"texture": SubResource("68")
}, {
"duration": 1.0,
"texture": SubResource("69")
}, {
"duration": 1.0,
"texture": SubResource("70")
}, {
"duration": 1.0,
"texture": SubResource("71")
}, {
"duration": 1.0,
"texture": SubResource("72")
}, {
"duration": 1.0,
"texture": SubResource("73")
}],
"loop": true,
"name": &"go_normal",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("58")
}, {
"duration": 1.0,
"texture": SubResource("59")
}, {
"duration": 1.0,
"texture": SubResource("60")
}, {
"duration": 1.0,
"texture": SubResource("61")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}],
"loop": true,
"name": &"idle_alert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("74")
}, {
"duration": 1.0,
"texture": SubResource("75")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("76")
}, {
"duration": 1.0,
"texture": SubResource("77")
}, {
"duration": 1.0,
"texture": SubResource("78")
}, {
"duration": 1.0,
"texture": SubResource("79")
}],
"loop": true,
"name": &"walk_alert",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(19, 25)

[sub_resource type="CircleShape2D" id="2"]
radius = 192.0

[node name="Turret" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("2")
projectile_scene = ExtResource("3")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_p28ma")
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = Array[NodePath]([NodePath("Idle"), NodePath("Walk"), NodePath("Alert"), NodePath("Dead")])

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_kdf0b")
state_id = "idle"

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_qvltu")
wander_radius = Vector2(100, 100)
speed = 10.0
max_speed = 60.0
state_id = "walk"

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource("6_xtvpq")
state_id = "alert"

[node name="FireTimer" type="Timer" parent="StateMachine/Alert"]
wait_time = 2.5

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("7_fw7uh")
state_id = "dead"

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FirePosition" type="Marker2D" parent="."]
position = Vector2(0, -18.0339)

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("7")
animation = &"walk_alert"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -12.5)
shape = SubResource("1")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0.0428963, -18.0659)
enabled = false
target_position = Vector2(0, 0)
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_layer = 0
collision_mask = 2
script = ExtResource("4")

[node name="green_circle" type="Sprite2D" parent="DetectionArea"]
visible = false
modulate = Color(1, 1, 1, 0.301961)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("2")

[connection signal="hit" from="." to="StateMachine" method="_on_turret_hit"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Alert/FireTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="animation_finished" from="Body" to="StateMachine" method="_on_body_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="StateMachine" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateMachine" method="_on_detection_area_body_exited"]
